# flatjson

./: .gitignore  README.md  pyproject.toml
flatjson/: __init__.py
tests/: test_flatjson.py
